ヘッターのフッターの修正

--- a/s_css/topcd62.css
+++ b/s_css/topcd62.css
@@ -1072,7 +1072,7 @@ background-size: 100%;
 #recruit {
     padding-top: 30vw;
     padding-bottom: 1.2rem;
-    background-image: url("../img/top_recruit_header.jpg");
+    background-image: url("../img/top_recruit_header_bg01.jpg");
     background-position: center top;
     background-repeat: no-repeat;
     background-size: 100% auto;
