--- a/s_css/company1551.css
+++ b/s_css/company1551.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
-header ul li:nth-of-type(4) a {
+header ul li:nth-of-type(2) a {
     border-bottom: 2px solid #fff;
 }
-.fixed ul li:nth-of-type(4) a {
+.fixed ul li:nth-of-type(2) a {
     border-bottom: 2px solid #008090;
 }
 header ul li:nth-of-type(1) a {
@@ -14,7 +14,7 @@ header ul li:nth-of-type(1) a {
     padding-bottom: 0rem !important;
 }
 @media screen and (max-width:767px) {
-	header ul li:nth-of-type(4) a {
+	header ul li:nth-of-type(2) a {
 		border-bottom: 2px solid #008090;
 		padding-bottom: 0.04rem;
 	}
@@ -25,13 +25,13 @@ header ul li:nth-of-type(1) a {
 body.toppage header h1 {
 	max-width: 2.75rem;
 	}
-	
+
 	@media screen and (max-width:767px) {
 	body.toppage header h1 {
 	max-width: 2.15rem;
 	}
 	}
-	
+
 	body.toppage header h1 a {
 	display: block;
 	height: 0.41rem;
@@ -41,14 +41,14 @@ body.toppage header h1 {
 	background-size: auto 100%;
 	text-indent: -9999px;
 	}
-	
+
 	body.toppage header.fixed h1 a {
 	background-image: url("../common/img/header_logo_kasou.png");
 	background-position: 0 0;
 	background-repeat: no-repeat;
 	background-size: auto 100%;
 	}
-	
+
 	@media screen and (min-width:768px) {
 	body.toppage header h1 a {
 	background-image: url("../common/img/header_logo.png") !important;
@@ -63,7 +63,7 @@ body.toppage header h1 {
 	background-size: auto 100%;
 	}
 	}
-	
+
 	@media screen and (max-width:767px) {
 	body.toppage header h1 a {
 	height: 0.32rem;
@@ -72,7 +72,7 @@ body.toppage header h1 {
 	height: 0.32rem;
 	}
 	}
-	
+
 	body.toppage #sp_mail_btn a {
 	background-image: url("../common/img/sp_mail_btn.png");
 	background-position:center center;
@@ -83,14 +83,14 @@ body.toppage header h1 {
 	height: 100%;
 	width: 100%;
 	}
-	
+
 	header.fixed #sp_mail_btn a {
 	background-image: url("../common/img/sp_mail_btn_black.png");
 	background-position:center center;
 	background-repeat: no-repeat;
 	background-size: contain;
 	}
-	
+
 	body.menu_open #sp_mail_btn a {
 	background-image: url("../common/img/sp_mail_btn.png");
 	background-position:center center;
@@ -152,7 +152,7 @@ body.toppage header h1 {
 	text-align: center;
 	line-height: 1.7;
 	padding-top: 0.6rem;
-	background-image:url("../common/img/ttl_logo_white.png");
+	/* background-image:url("../common/img/ttl_logo_white.png"); */
 	background-position: center top;
 	background-repeat: no-repeat;
 	background-size: auto 0.47rem;
@@ -301,7 +301,7 @@ body.toppage header h1 {
 	margin-top: 0.15rem;
 }
 .messageArea .box .box_text {
-	width: 5.7rem;
+	width: 5rem;
 	float: left;
 	position: relative;
 }
