--- a/common/css/common_kasou4c9c.css
+++ b/common/css/common_kasou4c9c.css
@@ -9,7 +9,7 @@ body{
   100% {opacity: 1}
 }
 header ul li a::before {
-	background: #008090 !important;
+	background: #33ac1b !important;
 }
 main{
   overflow: hidden;
@@ -26,7 +26,7 @@ section{
 				/*transform: translateY(-25%);*/
     transform: translateY(-50%);
 }
-  
+
   /* スマホ時の閉じるボタン */
   #sp_menu_close {
   position: absolute;
@@ -77,7 +77,7 @@ header ul li a::before {
 	left: 0;
 	width: 0%;
 	height: 2px;
-	background: #008090;
+	background: #33ac1b;
 	transition: all 0.3s ease;
 }
 header ul li a:hover::before {
