--- a/s_css/recruit83e0.css
+++ b/s_css/recruit83e0.css
@@ -3,11 +3,11 @@ header ul li:nth-of-type(5) a {
 	border-bottom: 2px solid #fff;
 }
 .fixed ul li:nth-of-type(5) a {
-	border-bottom: 2px solid #008090;
+	border-bottom: 2px solid #33ac1b;
 }
 @media screen and (max-width:767px) {
 	header ul li:nth-of-type(5) a {
-		border-bottom: 2px solid #008090;
+		border-bottom: 2px solid #33ac1b;
 	}
 	header ul li:nth-of-type(1) a {
 		border-bottom: none !important;
@@ -34,30 +34,30 @@ max-width: 2.15rem;
 body.toppage header h1 a {
 display: block;
 height: 0.41rem;
-background-image: url("../common/img/header_logo.png");
+/* background-image: url("../common/img/header_logo.png"); */
 background-position: 0 0;
 background-repeat: no-repeat;
 background-size: auto 100%;
 text-indent: -9999px;
 }
 body.toppage header.fixed h1 a {
-background-image: url("../common/img/header_logo_kasou.png");
+background-image: url("../common/img/BONDSproperty_logo.png");
 background-position: 0 0;
 background-repeat: no-repeat;
 background-size: auto 100%;
 }
 body.menu_open header.fixed h1 a {
-	background-image: url(../common/img/header_logo.png);
+	background-image: url("../common/img/BONDSproperty_logo.png");
 }
 @media screen and (min-width:768px) {
 body.toppage header h1 a {
-background-image: url("../common/img/header_logo.png") !important;
+background-image: url("../common/img/BONDSproperty_logo.png") !important;
 background-position: 0 0;
 background-repeat: no-repeat;
 background-size: auto 100%;
 }
 body.toppage header.fixed h1 a {
-background-image: url("../common/img/header_logo_kasou.png") !important;
+background-image: url("../common/img/BONDSproperty_logo.png") !important;
 background-position: 0 0;
 background-repeat: no-repeat;
 background-size: auto 100%;
@@ -864,7 +864,7 @@ img {
 	.recruit_senior .container1100 .recruit_senior_02 img{
 		right: -60px;
 	}
-	
+
 }
 @media screen and (max-width:767px) {
 	.recruit_senior {
@@ -885,18 +885,18 @@ img {
 	}
 	.recruit_senior .container1100{
 		padding: 0;
-	} 
-	.recruit_senior .container1100 .recruit_senior_01 div, 
+	}
+	.recruit_senior .container1100 .recruit_senior_01 div,
 	.recruit_senior .container1100 .recruit_senior_02 div {
 		width: 100%;
 		margin: auto;
-		margin-top: 84px;   
+		margin-top: 84px;
 	}
 	.recruit_senior .container1100 .recruit_senior_01 div .recruit_senior_name,
 	.recruit_senior .container1100 .recruit_senior_02 div .recruit_senior_name{
 		font-size: .14rem;
 	}
-	.recruit_senior .container1100 .recruit_senior_01 img, 
+	.recruit_senior .container1100 .recruit_senior_01 img,
 	.recruit_senior .container1100 .recruit_senior_02 img {
 		width: 400px;
 		top: -20px;
@@ -904,16 +904,16 @@ img {
 	}
 	.recruit_senior .container1100 .recruit_senior_01 img {
 		left: -40px;
-	}	
+	}
 	.recruit_senior .container1100 .recruit_senior_01{
 		margin-bottom: 180px;
 	}
-	.recruit_senior .container1100 .recruit_senior_01, 
+	.recruit_senior .container1100 .recruit_senior_01,
 	.recruit_senior .container1100 .recruit_senior_02 {
 		padding: 40px .2rem;
 		margin-top: 0px;
 	}
-	.recruit_senior .container1100 .recruit_senior_01 div h4, 
+	.recruit_senior .container1100 .recruit_senior_01 div h4,
 	.recruit_senior .container1100 .recruit_senior_02 div h4 {
 		font-size: .20rem;
 		margin-bottom: .20rem;
@@ -932,7 +932,7 @@ img {
 	}
 }
 @media screen and (max-width: 320px){
-	.recruit_senior .container1100 .recruit_senior_01 div, 
+	.recruit_senior .container1100 .recruit_senior_01 div,
 	.recruit_senior .container1100 .recruit_senior_02 div {
 		margin-top: 60px;
 	}
