--- a/s_css/worksf606.css
+++ b/s_css/worksf606.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 header ul li:nth-of-type(4) a {
-    border-bottom: 2px solid #008090;
+    border-bottom: 2px solid #33ac1b;
 }
 @media screen and (max-width:767px) {
     header ul li:nth-of-type(1) a {
