--- a/s_css/topcd62.css
+++ b/s_css/topcd62.css
@@ -525,11 +525,11 @@ min-height: 3.4rem;
 }
 
 
-/* 山田組ができること */
+/* ができること */
 
 .about_kakomi {
     background-color: #282c3c;
-    background-image: url("../img/logo_bg02.png");
+    /* background-image: url("../img/logo_bg02.png"); */
     background-repeat: no-repeat;
     background-position: 150% 260%;
     background-size: 7rem;
@@ -822,13 +822,13 @@ background-size: 100%;
 
 .service_works_text h4::before {
     content: "/";
-    color: #00a0b4;
+    color: #33ac1b;
     padding-right: 0.2rem;
 }
 
 .service_works_text h4::after {
     content: "/";
-    color: #00a0b4;
+    color: #33ac1b;
     padding-left: 0.2rem;
 }
 
@@ -900,7 +900,7 @@ background-size: 100%;
 }
 
 #works .section_ttl {
-    background-image: url("../common/img/ttl_logo_white.png");
+    /* background-image: url("../common/img/ttl_logo_white.png"); */
     background-position: center top;
     background-repeat: no-repeat;
     background-size: auto 0.4rem;
@@ -930,7 +930,7 @@ background-size: 100%;
 .works_ttl_box .vBorder {
     height: 0.4rem;
     width: 2px;
-    background: #00a0b4;
+    background: #33ac1b;
     margin: auto;
     margin-bottom: 0.6rem;
 }
@@ -1190,8 +1190,8 @@ background-size: 100%;
 }
 
 #recruit .container1100.recruit_link_wrapper {
-    background-color: #0082a0;
-    background-image: url("../img/logo_bg02.png");
+    background-color: #adc734;
+    /* background-image: url("../img/logo_bg02.png"); */
     background-repeat: no-repeat;
     background-size: 7.1rem;
     background-position: 150% -50%;
@@ -1203,8 +1203,8 @@ background-size: 100%;
 
 @media screen and (max-width: 767px) {
     #recruit .container1100.recruit_link_wrapper {
-        background-color: #0082a0;
-        background-image: url("../img/logo_bg02.png");
+        background-color: #adc734;
+        /* background-image: url("../img/logo_bg02.png"); */
         background-repeat: no-repeat;
         background-size: 4rem;
         background-position: -250% 50%;
