--- a/s_css/topcd62.css
+++ b/s_css/topcd62.css
@@ -1190,7 +1190,7 @@ background-size: 100%;
 }
 
 #recruit .container1100.recruit_link_wrapper {
-    background-color: #adc734;
+    background-color: #282c3c;
     /* background-image: url("../img/logo_bg02.png"); */
     background-repeat: no-repeat;
     background-size: 7.1rem;
