--- a/s_css/recruit83e0.css
+++ b/s_css/recruit83e0.css
@@ -152,7 +152,7 @@ animation: fadeIn 1s ease 0s 1 normal;
 	text-align: center;
 	line-height: 1.7;
 	padding-top: 0.6rem;
-	background-image:url("../common/img/ttl_logo_white.png");
+	/* background-image:url("../common/img/ttl_logo_white.png"); */
 	background-position: center top;
 	background-repeat: no-repeat;
 	background-size: auto 0.47rem;
@@ -349,7 +349,7 @@ img {
 .recruit_message{
 	margin-top: -180px;
 	padding: 240px 0 80px 0;
-	background: #00a0b4;
+	background: #282c3c;
 }
 .recruit_message .container1300 h3{
 	font-size: .32rem;
@@ -494,7 +494,7 @@ img {
 仕事の流れ
 ============================*/
 .recruit_flow{
-	background-image: url('../img/recruit/recruit_flow_bg.jpg');
+	/* background-image: url('../img/recruit/recruit_flow_bg.jpg'); */
 	background-size: cover;
 	padding: 80px .4rem;
 	box-sizing: border-box;
@@ -651,13 +651,15 @@ img {
 福利厚生
 ============================*/
 .recruit_benefits{
-	background: #fff;
+	/* background-image: url("../img/recruit/recruit_flow_bg.jpg"); */
+	background-size:cover;
 	padding: 80px .4rem;
 	box-sizing: border-box;
 	position: relative;
 }
 .recruit_benefits .container1300{
-	border: 1px #00a0b4 solid;
+	background: #fff;
+	border: 1px #2c9617 solid;
 	padding: 60px;
 	box-sizing: border-box;
 }
@@ -695,7 +697,7 @@ img {
 	display: flex;
 	align-items: center;
 	flex-direction: column;
-	background: #00a0b4;
+	background: #2c9617;
 	width: 100%;
 	padding: 40px 0;
 	margin-bottom: 20px;
@@ -766,9 +768,13 @@ img {
 	}
 }
 /*============================
+業務内容
+============================*/
+
+/*============================
 先輩からのメッセージ
 ============================*/
-.recruit_senior{
+/* .recruit_senior{
 	background: #edf4f6;
 	padding: 80px .4rem;
 	box-sizing: border-box;
@@ -936,11 +942,11 @@ img {
 	.recruit_senior .container1100 .recruit_senior_02 div {
 		margin-top: 60px;
 	}
-}
+} */
 /*============================
 働く社員紹介
 ============================*/
-.recruit_introduction{
+/* .recruit_introduction{
 	padding: 80px .4rem 0 .4rem;
 	box-sizing: border-box;
 	position: relative;
@@ -1047,7 +1053,7 @@ img {
 	.recruit_introduction .container1100 div a {
 		width: 240px;
 	}
-}
+} */
 /*============================
 募集要項
 ============================*/
@@ -1152,7 +1158,8 @@ img {
 	}
 }
 .recruit_entry .box_center {
-	background-image: url('../img/recruit/recruit_entry_bg.png');
+	background-color: #282c3c;
+	/* background-image: url('../img/recruit/recruit_entry_bg.png'); */
 	width: 5rem;
 	margin: 0 auto;
 	padding: .62rem 0;
@@ -1169,7 +1176,7 @@ img {
 	line-height: 1;
 	letter-spacing: .2em;
 	padding: .6rem 0 .45rem 0;
-	background-image: url("../common/img/ttl_logo_white.png");
+	background-image: url("../common/img/ttl_logo.png");
 }
 .recruit_entry p {
 	font-size: .24rem;
