--- a/s_css/servicef606.css
+++ b/s_css/servicef606.css
@@ -61,7 +61,7 @@ header ul li:nth-of-type(1) a {
 @media screen and (max-width:767px) {
 	.service_mv {
 		padding-top: 2.7rem;
-		background-image: url("../img/top_service_header_sp.jpg");
+		/* background-image: url(""); */
 		background-repeat: no-repeat;
 		background-position: center top;
 		background-size: 100% auto;
@@ -75,7 +75,7 @@ header ul li:nth-of-type(1) a {
 	text-align: center;
 	line-height: 1.7;
 	padding-top: 0.6rem;
-	background-image:url("../common/img/ttl_logo_white.png");
+	/* background-image:url(""); */
 	background-position: center top;
 	background-repeat: no-repeat;
 	background-size: auto 0.47rem;
@@ -299,7 +299,7 @@ img {
 }
 .service_construction .box:before {
 	content: '';
-	background: url('../img/service/logo_bg.png');
+	/* background: url('../img/service/logo_bg.png'); */
 	background-size: cover;
 	height: 4.12rem;
 	width: 6.44rem;
@@ -425,7 +425,7 @@ img {
 	bottom: -.2rem;
 	left: 50%;
 	transform: translateX(-50%);
-	background: #008090;
+	background: #33ac1b;
 }
 @media screen and (max-width:767px) {
 	.service_construction .listJob .item .ph:after {
@@ -464,7 +464,7 @@ img {
 	background: #fff;
 	margin: .4rem 1rem 0;
 	padding: .32rem .4rem .35rem .38rem;
-	border: 1px solid #00a0b4;
+	border: 1px solid #33ac1b;
 	position: relative;
 }
 @media screen and (max-width:767px) {
@@ -504,7 +504,7 @@ img {
 	}
 }
 .service_construction .technology .l_right {
-	width: 5.1rem;
+	width:4.5rem;
 	margin: 0 0 0 auto;
 }
 @media screen and (max-width:767px) {
@@ -575,7 +575,7 @@ img {
 	line-height: 1;
 	letter-spacing: .2em;
 	padding: .6rem 0;
-	background-image: url("../common/img/ttl_logo_white.png");
+  background-image: url("../common/img/ttl_logo.png");
 }
 @media screen and (max-width:767px) {
 	.service_works .section_ttl {
