--- a/s_css/company1551.css
+++ b/s_css/company1551.css
@@ -289,7 +289,7 @@ body.toppage header h1 {
 .messageArea .group .txt {
 	font-size: .16rem;
 	font-weight: 500;
-	letter-spacing: .1em;
+	letter-spacing: 0em;
 	line-height: 1;
 	text-align: right;
 }
