会社概要ページ修正

--- a/s_css/servicef606.css
+++ b/s_css/servicef606.css
@@ -48,7 +48,7 @@ header ul li:nth-of-type(1) a {
 .service_mv {
 	position: relative;
 	padding-top: 37.5%;
-	background-image: url("../img/top_service_header.jpg");
+	background-image: url("../img/1772928_l.jpg");
 	background-repeat: no-repeat;
 	background-position: center top;
 	background-size: 100% auto;
