採用ページ１次提出

--- a/s_css/company1551.css
+++ b/s_css/company1551.css
@@ -407,7 +407,7 @@ body.toppage header h1 {
 	transform: translate(-50%, 0);
 	width: 8.19rem;
 	height: 5.24rem;
-	background-image: url();
+	background-image: url("../img/company/BP_philosophy_bg.jpg"); 
 	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
