--- a/s_css/recruit83e0.css
+++ b/s_css/recruit83e0.css
@@ -120,7 +120,7 @@ animation: fadeIn 1s ease 0s 1 normal;
 .recruit_mv {
 	position: relative;
 	padding-top: 37.5%;
-	background-image: url("../img/top_recruit_header.jpg");
+	background-image: url("../img/recruit/teo-zac-XHf_1n7lKH4-unsplash.jpg");
 	background-repeat: no-repeat;
 	background-position: center top;
 	background-size: 100% auto;
@@ -768,293 +768,6 @@ img {
 	}
 }
 /*============================
-業務内容
-============================*/
-
-/*============================
-先輩からのメッセージ
-============================*/
-/* .recruit_senior{
-	background: #edf4f6;
-	padding: 80px .4rem;
-	box-sizing: border-box;
-	position: relative;
-}
-.recruit_senior h3{
-	font-size: .32rem;
-	text-align: center;
-	color: #181a31;
-	margin-bottom: .16rem;
-}
-.recruit_senior .f-playfair{
-	font-size: .24rem;
-	letter-spacing: 0.2em;
-	text-align: center;
-	color: #181a31;
-	margin-bottom: .48rem;
-}
-.recruit_senior p{
-	font-size: .18rem;
-	line-height: 2;
-	text-align: center;
-	color: #181a31;
-	margin-bottom: .72rem;
-}
-.recruit_senior .container1100 .recruit_senior_01,
-.recruit_senior .container1100 .recruit_senior_02{
-	padding: 60px;
-	box-sizing: border-box;
-	position: relative;
-	background: #fff;
-}
-.recruit_senior .container1100 .recruit_senior_01{
-	margin-bottom: .72rem;
-}
-.recruit_senior .container1100 .recruit_senior_01 img,
-.recruit_senior .container1100 .recruit_senior_02 img{
-	position: absolute;
-	top: -20px;
-	width: 52%;
-}
-.recruit_senior .container1100 .recruit_senior_01 img{
-	left: -100px;
-}
-.recruit_senior .container1100 .recruit_senior_02 img{
-	right: -100px;
-}
-.recruit_senior .container1100 .recruit_senior_01 div,
-.recruit_senior .container1100 .recruit_senior_02 div{
-	width: 54%;
-}
-.recruit_senior .container1100 .recruit_senior_01 div{
-	margin-left: auto;
-}
-.recruit_senior .container1100 .recruit_senior_02 div{
-	margin-right: auto;
-}
-.recruit_senior .container1100 .recruit_senior_01 div h4,
-.recruit_senior .container1100 .recruit_senior_02 div h4{
-	font-size: .24rem;
-	line-height: 1.75;
-	margin-bottom: .24rem;
-}
-.recruit_senior .container1100 .recruit_senior_01 div .recruit_senior_name,
-.recruit_senior .container1100 .recruit_senior_02 div .recruit_senior_name{
-	font-size: .16rem;
-	font-weight: 500;
-	line-height: normal;
-	text-align: left;
-	margin-bottom: .24rem;
-}
-.recruit_senior .container1100 .recruit_senior_01 div .recruit_senior_name span,
-.recruit_senior .container1100 .recruit_senior_02 div .recruit_senior_name span{
-	font-size: .18rem;
-	font-weight: bold;
-}
-.recruit_senior .container1100 .recruit_senior_01 div p,
-.recruit_senior .container1100 .recruit_senior_02 div p{
-	font-size: .16rem;
-	font-weight: 500;
-	line-height: 2;
-	text-align: left;
-	margin-bottom: 0;
-}
-@media screen and (max-width:1200px) {
-	.recruit_senior .container1100 .recruit_senior_01 img,
-	.recruit_senior .container1100 .recruit_senior_02 img{
-	width: 50%;
-	}
-	.recruit_senior .container1100 .recruit_senior_01 img{
-		left: -60px;
-	}
-	.recruit_senior .container1100 .recruit_senior_02 img{
-		right: -60px;
-	}
-
-}
-@media screen and (max-width:767px) {
-	.recruit_senior {
-		padding: 40px .2rem;
-	}
-	.recruit_senior h3 {
-		margin-bottom: .08rem;
-		font-size: .24rem;
-	}
-	.recruit_senior .f-playfair {
-		margin-bottom: .16rem;
-		font-size: .16rem;
-	}
-	.recruit_senior p {
-		text-align: left;
-		margin-bottom: 180px;
-		font-size: .16rem;
-	}
-	.recruit_senior .container1100{
-		padding: 0;
-	}
-	.recruit_senior .container1100 .recruit_senior_01 div,
-	.recruit_senior .container1100 .recruit_senior_02 div {
-		width: 100%;
-		margin: auto;
-		margin-top: 84px;
-	}
-	.recruit_senior .container1100 .recruit_senior_01 div .recruit_senior_name,
-	.recruit_senior .container1100 .recruit_senior_02 div .recruit_senior_name{
-		font-size: .14rem;
-	}
-	.recruit_senior .container1100 .recruit_senior_01 img,
-	.recruit_senior .container1100 .recruit_senior_02 img {
-		width: 400px;
-		top: -20px;
-		transform: translateY(-50%);
-	}
-	.recruit_senior .container1100 .recruit_senior_01 img {
-		left: -40px;
-	}
-	.recruit_senior .container1100 .recruit_senior_01{
-		margin-bottom: 180px;
-	}
-	.recruit_senior .container1100 .recruit_senior_01,
-	.recruit_senior .container1100 .recruit_senior_02 {
-		padding: 40px .2rem;
-		margin-top: 0px;
-	}
-	.recruit_senior .container1100 .recruit_senior_01 div h4,
-	.recruit_senior .container1100 .recruit_senior_02 div h4 {
-		font-size: .20rem;
-		margin-bottom: .20rem;
-	}
-	.recruit_senior .container1100 .recruit_senior_01 div .recruit_senior_name span,
-	.recruit_senior .container1100 .recruit_senior_02 div .recruit_senior_name span{
-		display: block;
-		margin-top: 8px;
-	}
-}
-@media screen and (max-width: 375px){
-	.recruit_senior .container1100 .recruit_senior_01 div h4,
-	 .recruit_senior .container1100 .recruit_senior_02 div h4 {
-		font-size: .185rem;
-		margin-bottom: .185rem;
-	}
-}
-@media screen and (max-width: 320px){
-	.recruit_senior .container1100 .recruit_senior_01 div,
-	.recruit_senior .container1100 .recruit_senior_02 div {
-		margin-top: 60px;
-	}
-} */
-/*============================
-働く社員紹介
-============================*/
-/* .recruit_introduction{
-	padding: 80px .4rem 0 .4rem;
-	box-sizing: border-box;
-	position: relative;
-}
-.recruit_introduction .container1100{
-	background-image: url('../img/recruit/recruit_introduction_bg.jpg');
-	background-size: cover;
-	padding: 60px 0;
-	box-sizing: border-box;
-	position: relative;
-}
-.recruit_introduction .container1100 img{
-	position: absolute;
-	top: -20px;
-	left: 20px;
-	width: 50%;
-	height: 100%;
-	object-fit: cover;
-}
-.recruit_introduction .container1100 div{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	width: calc(50% - 20px);
-	margin-left: auto;
-}
-.recruit_introduction .container1100 div h3{
-	font-size: .32rem;
-	text-align: center;
-	color: #fff;
-	margin-bottom: .24rem;
-}
-.recruit_introduction .container1100 div .f-playfair{
-	font-size: .24rem;
-	letter-spacing: 0.2em;
-	text-align: center;
-	color: #fff;
-	margin-bottom: .48rem;
-}
-.recruit_introduction .container1100 div p{
-	font-size: .22rem;
-	line-height: normal;
-	text-align: center;
-	color: #fff;
-	margin-bottom: .24rem;
-}
-.recruit_introduction .container1100 div a{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 300px;
-	height: 60px;
-	border: 1px #fff solid;
-	border-radius: 50px;
-	font-size: 16px;
-	font-weight: 500;
-	color: #fff;
-	text-decoration: none;
-}
-.recruit_introduction .container1100 div a:hover{
-	background: #fff;
-	color: #283c78;
-}
-@media screen and (max-width:767px) {
-	.recruit_introduction {
-		padding: 156px .2rem 0 .2rem;
-	}
-	.recruit_introduction .container1100 {
-		padding: 40px 0;
-		background-position: right;
-	}
-	.recruit_introduction .container1100 img {
-		position: absolute;
-		top: 0px;
-		left: .2rem;
-		transform: translateY(-50%);
-		width: calc(100% - .4rem);
-		height: auto;
-		object-fit: cover;
-	}
-	.recruit_introduction .container1100 div {
-		width: 100%;
-		margin: auto;
-		margin-top: 95px;
-	}
-	.recruit_introduction .container1100 div p{
-		font-size: .18rem;
-		margin-bottom: .24rem;
-	}
-	.recruit_introduction .container1100 div h3 {
-		font-size: .24rem;
-	}
-	.recruit_introduction .container1100 div .f-playfair {
-		font-size: .16rem;
-		margin-bottom: .32rem;
-	}
-	.recruit_introduction .container1100 div a {
-		width: 255px;
-		height: 45px;
-	}
-}
-@media screen and (max-width: 320px){
-	.recruit_introduction .container1100 div a {
-		width: 240px;
-	}
-} */
-/*============================
 募集要項
 ============================*/
 .recruit_application{
@@ -1139,7 +852,7 @@ img {
 ============================*/
 .recruit_entry {
 	margin-top: .8rem;
-	background: url('../img/recruit/recruit_bg.jpg');
+	background: url('../img/recruit/BP_recruit_bg.jpg');
 	background-size: cover;
 	background-position: center;
 	padding: .6rem 0;
