お問い合わせページ一回目提出

--- a/s_css/form1551.css
+++ b/s_css/form1551.css
@@ -2332,7 +2332,7 @@ dlレイアウト
 }
 .contact .contact_mv {
 	padding: 1.09rem 0 1rem;
-	background-image: url("../img/mv_purple.jpg");
+	background-image: url("../img/BP_contact_top.jpg");
 	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
