--- a/s_css/company1551.css
+++ b/s_css/company1551.css
@@ -117,8 +117,8 @@ body.toppage header h1 {
 	#company .container1300 {
 		width: 100%;
 		box-sizing: border-box;
-		padding-left: 0.2rem;
-		padding-right: 0.2rem;
+		padding-left: 0.1rem;
+		padding-right: 0.1rem;
 	}
 }
 
@@ -138,7 +138,7 @@ body.toppage header h1 {
 @media screen and (max-width:767px) {
 	.company_mv {
 		padding-top: 2.7rem;
-		background-image: url("../img/company/bp_mv_pc.jpg");
+		background-image: url("../img/company/mv_sp_bp.jpg");
 		background-repeat: no-repeat;
 		background-position: center top;
 		background-size: 100% auto;
