--- a/s_css/worksf606.css
+++ b/s_css/worksf606.css
@@ -15,11 +15,14 @@ header ul li:nth-of-type(4) a {
 /*============================
 works wrap
 ============================*/
+.f_red{
+  color: red;
+}
 .works_title{
-    background-image: url(../img/works_bg.jpg);
+    background-image: url(../img/BP_on_bg.jpg);
   }
 .works_wrap{
-    padding: 80px;
+    padding: 0;
 }
 .works_wrap h3{
     display: inline-block;
@@ -70,6 +73,86 @@ works wrap
         font-size: .24rem;
         margin: 0 0 80px 0;
     }
+}
+.philosophyArea {
+	padding: 0.6rem 0 0rem;
+	position: relative;
+	height: 5.5rem;
+	box-sizing: border-box;
+}
+.philosophyArea .container1100 {
+	background: transparent!important;
+	z-index: 1;
+}
+.philosophyArea:after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 50%;
+	display: block;
+	transform: translate(-50%, 0);
+	width: 8.19rem;
+	height: 5.24rem;
+	background-image: url("../img/company/BP_philosophy_bg.jpg");
+	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
+	z-index: -1;
+  opacity: 0.4;
+}
+.philosophyArea .title {
+	margin-bottom: 0.46rem;
+}
+.philosophyArea .txt {
+  text-align: center;
+	font-size: 0.3rem;
+	color: #181A31;;
+	letter-spacing: 0.05em;
+	line-height: 1.86;
+}
+
+@media screen and (max-width:767px) {
+	.philosophyArea {
+		margin: 0.425rem 0 0.49rem;
+		padding: 0.63rem 0 0.69rem;
+		height: auto;
+		background-image: url();
+		background-size: cover;
+		background-position: center center;
+		background-repeat: no-repeat;
+	}
+	.philosophyArea .container1100 {
+		width: 100%;
+		box-sizing: border-box;
+		padding-left: 0.3rem;
+		padding-right: 0.3rem;
+	}
+	.philosophyArea:after {
+		/* content: '';
+		position: absolute;
+		width: 100%;
+		height: 3.765rem;
+		background-image: url(../img/company/philosophy_bg_sp.jpg);
+		background-size: cover;
+		background-position: center center;
+		background-repeat: no-repeat;
+		z-index: -1; */
+		display: none;
+	}
+	.philosophyArea .title {
+		margin-bottom: 0.3rem;
+	}
+	.philosophyArea .txt {
+		font-size: 0.18rem;
+		letter-spacing: 0.04em;
+		line-height: 1.83;
+		text-align: left;
+	}
+}
+@media screen and (max-width:350px) {
+	.philosophyArea {
+		padding: 0.8rem 0;
+	}
 }
 /*============================
 works post_list
@@ -405,20 +488,24 @@ img {
 	}
 }
 .service_construction .box_text .comment {
-	font-size: .2rem;
-	font-weight: 500;
-	letter-spacing: .05em;
-	line-height: 1;
-	margin-top: .4rem;
+  font-size: .21rem;
+    font-weight: 500;
+    letter-spacing: .05em;
+    line-height: 2em;
+    margin-top: .4rem;
+    border: solid 0.025rem #33ac1b;
+    padding: 1em 0.2rem;
 }
 @media screen and (max-width:767px) {
 	.service_construction .box_text .comment {
-		font-size: .12rem;
-		line-height: 1.6667;
-		margin-top: .34rem;
-		position: relative;
-    z-index: 2;
-	}
+    font-size: .21rem;
+        font-weight: 500;
+        letter-spacing: .05em;
+        line-height: 2em;
+        margin-top: .4rem;
+        border: solid 0.025rem #33ac1b;
+        padding: 1em 0.2rem;
+  	}
 }
 /*.service_construction .box .ph {
 	width: 8rem;
