--- a/s_css/worksf606.css
+++ b/s_css/worksf606.css
@@ -64,14 +64,23 @@ works wrap
         object-position: 50% 50%;
         font-family: 'object-fit: cover; object-position: 50% 50%;'
     }
+    #p_lr_sp{
+      padding-left: 0;
+      padding-right: 0;
+    }
 }
 @media screen and (max-width:768px) {
     .works_wrap{
-        padding: 60px 0px;
+        padding:0px;
+        width:85%;
     }
     .works_wrap h3{
         font-size: .24rem;
         margin: 0 0 80px 0;
+    }
+    #p_lr_sp{
+      padding-left: 0;
+      padding-right: 0;
     }
 }
 .philosophyArea {
@@ -114,7 +123,7 @@ works wrap
 @media screen and (max-width:767px) {
 	.philosophyArea {
 		margin: 0.425rem 0 0.49rem;
-		padding: 0.63rem 0 0.69rem;
+		padding: 0rem;
 		height: auto;
 		background-image: url();
 		background-size: cover;
@@ -122,10 +131,10 @@ works wrap
 		background-repeat: no-repeat;
 	}
 	.philosophyArea .container1100 {
-		width: 100%;
-		box-sizing: border-box;
-		padding-left: 0.3rem;
-		padding-right: 0.3rem;
+      width: 100%;
+      box-sizing: border-box;
+      padding-left: 0.15rem;
+      padding-right: 0.15rem;
 	}
 	.philosophyArea:after {
 		/* content: '';
@@ -142,16 +151,16 @@ works wrap
 	.philosophyArea .title {
 		margin-bottom: 0.3rem;
 	}
-	.philosophyArea .txt {
-		font-size: 0.18rem;
-		letter-spacing: 0.04em;
-		line-height: 1.83;
-		text-align: left;
-	}
+  .philosophyArea .txt {
+    font-size: 0.13rem;
+    letter-spacing: 0;
+    line-height: 1.83;
+    text-align: center;
+}
 }
 @media screen and (max-width:350px) {
 	.philosophyArea {
-		padding: 0.8rem 0;
+		padding: 0;
 	}
 }
 /*============================
@@ -367,13 +376,18 @@ img {
 }
 
 .service_construction {
-	background: #edf4f6;
+	background: #fff;
 	padding: 0.3rem 0 0.3rem;
 	position: relative;
 }
+@media screen and (max-width:1024px) {
+  .service_construction {
+    padding:0;
+  }
+}
 @media screen and (max-width:767px) {
 	.service_construction {
-		padding: .6rem 0 .7rem;
+		padding:0;
 	}
 	#service .service_construction .container1300 {
 		padding: 0 .2rem;
@@ -405,7 +419,7 @@ img {
 }
 .service_construction .box {
   background: #fff;
-  padding: .75rem 1rem 0.6rem;
+  padding:0;
   box-sizing: border-box;
   position: relative;
   }
@@ -413,11 +427,6 @@ img {
     display: flex;
     justify-content: space-between;
   }
-@media screen and (max-width:1024px) {
-	.service_construction .box {
-	padding: .75rem 1rem 1.75rem;
-	}
-}
 @media screen and (max-width:767px) {
   .box_text_container{
     display: flex;
@@ -460,23 +469,25 @@ img {
 }
 @media screen and (max-width:1200px) {
 	.service_construction .box_text {
-		width: 5rem;
+		width: 100%;
 	}
 }
 @media screen and (max-width:1024px) {
 	.service_construction .box_text {
-		width: 4rem;
+		width: 100%;
+    margin: 0.32rem 0;
 	}
 }
 @media screen and (max-width:767px) {
 	.service_construction .box_text {
     width: auto;
     float: none;
-    padding: 0.83rem 0.2rem 0rem;
+    padding: 0.3rem 0.2rem 0.2rem;
     background: rgb(255, 255, 255);
 	}
 }
 .service_construction .box_text .txt {
+  width: 100%;
   font-size: 0.28rem;
     font-weight: 500;
     letter-spacing: .05em;
@@ -503,7 +514,7 @@ img {
 }
 @media screen and (max-width:767px) {
 	.service_construction .box_text .comment {
-    font-size: .14rem;
+    font-size: .13rem;
         font-weight: 500;
         letter-spacing: .05em;
         line-height: 2em;
