--- a/common/css/common.css
+++ b/common/css/common.css
@@ -483,7 +483,7 @@ header ul li a::before {
     left: 0;
     width: 0%;
     height: 2px;
-    background: #fff;
+    background: #33ac1b;
     transition: all 0.3s ease;
 }
 
